# spectrix

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  lmfit_test.py  requirements.txt  rust-toolchain  spectrix-53f888e3b254667f.js  spectrix-53f888e3b254667f_bg.wasm  spectrix-b780598ebedf896f.js  spectrix-b780598ebedf896f_bg.wasm  spectrix.sh  sw.js  test.py
.github/workflows/: rust.yml
assets/: sw.js
etc/: amdc_2016.txt  archivist.sh
root_conversions/: gaussian_fitter.py  parquet2root.py  spectrix_histograms_to_root.py
src/: app.rs  app_web.rs  channel_data.rs  channel_map.rs  compass_data.rs  compass_file.rs  compass_run.rs  error.rs  event_builder.rs  kinematics.rs  lazyframer.rs  lib.rs  main.rs  nuclear_data.rs  pane.rs  processer.rs  scaler_list.rs  shift_map.rs  tree.rs  used_size.rs  workspacer.rs  ws.rs
src/ai/: assistant.rs  codebase.rs  context.rs  mod.rs  prompt.rs  provider.rs  response.rs
src/custom_analysis/: analysis.rs  mod.rs  se_sps.rs
src/custom_analysis/se_sps_analysis/: helpers.rs  integration_methods.rs  mod.rs  run_info.rs  se_sps.rs  settings.rs  uuid_map.rs
src/cutter/: cut_handler.rs  cuts.rs  egui_polygon.rs  mod.rs
src/egui_plot_stuff/: colors.rs  egui_filled_area.rs  egui_horizontal_line.rs  egui_image.rs  egui_line.rs  egui_plot_settings.rs  egui_points.rs  egui_polygon.rs  egui_vertical_line.rs  line_style.rs  mod.rs
src/fitter/: background_fitter.rs  common.rs  egui_fit_markers.rs  egui_line.rs  egui_markers.rs  fit.rs  fit_handler.rs  fit_markers.rs  fit_settings.rs  fitter.rs  fitter_handler.rs  gaussian.rs  gaussian_fitter.rs  linear.rs  main_fitter.rs  mod.rs
src/fitter/models/: double_exponential.rs  exponential.rs  gaussian.rs  linear.rs  mod.rs  polynomial.rs  powerlaw.rs  quadratic.rs
src/histoer/: colormaps.rs  configs.rs  cuts.rs  histogram1d.rs  histogram2d.rs  histogram_script.rs  histogram_scripter.rs  histogrammer.rs  mod.rs  pane.rs  peak_finder.rs  plot_settings.rs  sps.rs  tree.rs  ui_helpers.rs
src/histoer/histo1d/: context_menu.rs  custom_plot_manipulation.rs  filling.rs  fitting.rs  histogram1d.rs  interactive_cuts.rs  keybinds.rs  markers.rs  mod.rs  peak_finder.rs  plot_settings.rs  rebinning.rs  statistics.rs  utility.rs
src/histoer/histo2d/: colormaps.rs  context_menu.rs  histogram2d.rs  keybinds.rs  mod.rs  plot_settings.rs  projections.rs  rebinning.rs  statistics.rs
src/histogram_scripter/: calibration.rs  configure_auxillary_detectors.rs  configure_histograms.rs  configure_lazyframes.rs  custom_scripts.rs  histogram_grid.rs  histogram_script.rs  histogram_ui_elements.rs  manual_histogram_script.rs  manual_histogram_scripts.rs  mod.rs
src/histogram_scripter/fsu_custom_script/: catrina.rs  cebra.rs  general.rs  icespice.rs  mod.rs  se_sps.rs
src/ui/: app.rs  app_web.rs  mod.rs  pane.rs  tree.rs
src/util/: egui_file_dialog.rs  lazyframer.rs  mod.rs  processer.rs  workspacer.rs
tests/: lmfit_test.py
