[package]
name = "spectrix"
version = "0.4.0"
authors = ["Alex Conley <imaconley1@gmail.com>"]
edition = "2021"
rust-version = "1.82.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",       # To support Linux (and CI) use x11 or wayland
    #"wayland",
] }
egui = "0.30"

log = "0.4"
serde = { version = "1.0.216", features = ["derive"] }
egui_plot = {version = "0.30", features = ["serde"] }
egui_tiles = "0.11"
egui_extras = {version = "0.30", features = ["syntect"] }
egui_file = "0.19"
epaint = "0.30"
env_logger = "0.11.5"
polars = { version = "0.45.0", features = ["lazy", "parquet", "performant"] }
polars-lazy = { version = "0.45.0"}
rayon = "1.10.0"
rfd = "0.15.1"
serde_yaml = "0.9.31"
serde_json = "1.0.133"
geo = "0.29.3"
fnv = "1.0.7"
varpro = "0.10.1"
nalgebra = "0.33.2"
compute = "0.2.3"
find_peaks = "0.1.5"
pyo3 = { version = "0.22.0", features = ["auto-initialize"] }
regex = "1.11.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]